<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/language_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_language"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toTopOf="@id/language_buttons_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/language_buttons_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/english_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:backgroundTint="@color/material_dynamic_primary_container"
                android:textColor="@android:color/white"
                android:layout_margin="8dp" />

            <Button
                android:id="@+id/french_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/french"
                android:backgroundTint="@color/material_dynamic_primary_container"
                android:textColor="@android:color/white"
                android:layout_margin="8dp" />

            <Button
                android:id="@+id/arabic_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:backgroundTint="@color/material_dynamic_primary_container"
                android:textColor="@android:color/white"
                android:layout_margin="8dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>